--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Catálogo exclusivo de joyería fina. Aretes, cadenas, pulseras y más.">
-    <title>Joyería Exclusiva | Catálogo</title>
+    <meta name="description" content="CAMALÉ - Catálogo exclusivo de joyería fina. Lujo sutil en cada detalle.">
+    <title>CAMALÉ | Catálogo de Joyería</title>
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json">
@@ -26,8 +26,9 @@
 <body>
     <header class="app-header">
         <div class="header-content">
-            <h1 class="brand-title">Joyería <span class="accent">Exclusiva</span></h1>
-            <p class="brand-subtitle">Elegancia en cada detalle</p>
+            <img src="./assets/logo.jpg" alt="CAMALÉ Logo" class="brand-logo">
+            <h1 class="brand-title">CAMA<span class="accent">LÉ</span></h1>
+            <p class="brand-subtitle">LUJO SUTIL</p>
         </div>
         <nav class="main-nav" id="mainNav" style="display: none;">
             <button id="btnHome" class="nav-btn active">Inicio</button>
