feat: Rebrand application to CAMALÉ, incorporating a new logo, updated metadata, and styling, and adding a catalog archive.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta name="description" content="CAMALÉ - Catálogo exclusivo de joyería fina. Lujo sutil en cada detalle.">
     <title>CAMALÉ | Catálogo de Joyería</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/jpeg" href="./assets/logo.jpg">
+
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json">
-    <meta name="theme-color" content="#D4AF37">
-    <link rel="apple-touch-icon" href="./icons/icon-192.png">
+    <meta name="theme-color" content="#0A1628">
+    <link rel="apple-touch-icon" href="./icons/icon-192.jpg">
 
     <!-- Fuentes (Google Fonts: Playfair Display & Outfit) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +50,7 @@
     </div>
 
     <footer class="app-footer">
-        <p>&copy; 2024 Joyería Exclusiva</p>
+        <p>&copy; 2024 CAMALÉ - Lujo Sutil</p>
     </footer>
 
     <!-- Modals -->
