--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
     </div>
 
     <!-- Scripts -->
-    <!-- Google Identity Services -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js" async defer></script>
+    <!-- Google Identity Services - Load synchronously to avoid race conditions -->
+    <script src="https://accounts.google.com/gsi/client"></script>
+    <script src="https://apis.google.com/js/api.js" onload="console.log('✅ Google APIs loaded')"></script>
 
-    <!-- App Logic -->
+    <!-- App Logic - Loads after Google APIs -->
     <script type="module" src="./js/app.js"></script>
 </body>
 
