--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                     </select>
                 </div>
                 <div style="margin-bottom: 1rem; text-align: left;">
+                    <label>Precio</label>
+                    <input type="text" id="editProdPrice" placeholder="Ej: $150.000"
+                        style="width:100%; padding:0.5rem; border:1px solid #ddd; border-radius:4px;">
+                </div>
+                <div style="margin-bottom: 1rem; text-align: left;">
                     <label>Imagen (Opcional)</label>
                     <input type="file" id="editProdImage" accept="image/*"
                         style="width:100%; padding:0.5rem; border:1px solid #ddd; border-radius:4px;">
