--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#0A1628">
-    <link rel="apple-touch-icon" href="./icons/icon-192.jpg">
+    <link rel="apple-touch-icon" href="assets/icon-192.png">
 
     <!-- Fuentes (Google Fonts: Playfair Display & Outfit) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
