style: Compactar encabezado, enlace en logo y formato de moneda COP

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <body>
     <header class="app-header">
         <div class="header-content">
-            <img src="./assets/logo.jpg" alt="CAMALÉ Logo" class="brand-logo">
+            <a href="./" style="display: block; text-decoration: none;">
+                <img src="./assets/logo.jpg" alt="CAMALÉ Logo" class="brand-logo">
+            </a>
             <h1 class="brand-title">CAMA<span class="accent">LÉ</span></h1>
             <p class="brand-subtitle">LUJO SUTIL</p>
         </div>
