fix: Sincronización pública para clientes, fix link logo y robustez GAPI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="app-header">
         <div class="header-content">
-            <a href="./" style="display: block; text-decoration: none;">
+            <a href="./" id="logoLink" style="display: block; text-decoration: none;">
                 <img src="./assets/logo.jpg" alt="CAMALÉ Logo" class="brand-logo">
             </a>
             <h1 class="brand-title">CAMA<span class="accent">LÉ</span></h1>
