--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>CAMALÉ | Catálogo de Joyería</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/jpeg" href="./assets/logo.jpg">
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json">
