--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json">
-    <meta name="theme-color" content="#0A1628">
-    <link rel="apple-touch-icon" href="assets/icon-192.png">
+    <meta name="theme-color" content="#000B1A">
+    <link rel="apple-touch-icon" href="assets/favicon.svg">
 
     <!-- Fuentes (Google Fonts: Playfair Display & Outfit) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
